css/style.css
/*=====================================
=            Basic styling            =
=====================================*/
* {
   box-sizing: border-box;
}

html, body {
   width : 100%;
   height: 100%;
}

body,
header,
.container,
.main-nav ul,
.slider,
.wwd,
.feature,
.teamFaces,
footer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

body,
.container,
.wwd,
.feature,
footer {
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}

body {
  font-family     : 'Open Sans', sans-serif;
  background-color: rgba(179, 194, 191, 0.1);
  color           : #3b3a36;
  min-height      : 100vh;
}

.container,
.slider,
header,
.wwd,
.feature,
footer {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.container,
.slider,
header,
.wwd,
.feature,
.teamFaces,
footer {
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}

header,
.sliders,
.container,
.wwd,
.teamFaces,
footer {
  -webkit-box-flex: 1;
  -webkit-flex: 1 100%;
      -ms-flex: 1 100%;
          flex: 1 100%;
}

/*=====  End of Basic styling  ======*/


/**
 *
 * MobileFirst
 *
 */
/* Header styling */
header {
  padding: 1em 0;
}

header .container {
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
}

.logo {
  margin-bottom: 0;
  letter-spacing: -0.1em;
}

.description {
  margin-top: 0;
  opacity: 0.3;
  letter-spacing: 0.1em;
}

.main-nav {
  margin-bottom: 2em;
}

.main-nav ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.main-nav li {
  margin-right: 1em;
}

.main-nav li:last-child {
  margin: 0;
}

.main-nav a {
  font-size: 0.9em;
  text-decoration: none;
  color: #3b3a36;
  opacity: 0.8;
  -webkit-transition: all 0.2s ease-in-out;
          transition: all 0.2s ease-in-out;
}

.main-nav a:hover {
  text-decoration: none;
  opacity: 1;
}

/* Sliders */
.slider {
  padding: 2em;
}

.slider .container {
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
      -ms-flex-direction: column;
          flex-direction: column;
}

.text {
  text-align: center;
}

.slider .logo {
  font-size: 18em;
}

.slider h1 {
  margin: 0;
}

.slider p {
  margin: 0 0 2em 0;
}

.text .btn {
  border: 0.1em solid white;
}

.text .btn:hover {
  background-color: rgba(255, 255, 255, 0.1);
  opacity: 1;
}

.wwd .btn {
  border: 0.1em solid #3b3a36;
  opacity: 0.3;
}

.wwd .btn:hover {
  border: 0.1em solid #c0dfd9;
  opacity: 0.8;
}

.btn {
  text-decoration: none;
  color: inherit;
  padding: 0.5em 1em;
  border-radius: 4%;
  opacity: 0.5;
  -webkit-transition: all 0.2s ease-in-out;
          transition: all 0.2s ease-in-out;
}


.first {
  background-color: #c0dfd9;
}

.second {
  background-color: #e9ece5;
}

.thirth {
  background-color: #b3c2bf;
}

.forth {
  background-color: #3b3a36;
  color: #e9ece5;
}

.introductionHead,
.introductionDesc {
  margin: 0;
  font-weight: 300;
}

.introductionHead {
  font-size: 3em;
}

.introductionDesc {
  opacity: 0.5;
}

.wwd {
  margin: 4em 0;
}

.feature {
  margin-bottom: 3em;
}

.feature i {
  font-size: 8em;
}

.feature p {
  opacity: 0.5;
}

.teamFaces {
  margin: 6em 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.face {
  position: relative;
  width: 8em;
  height: 0;
  padding: 8em 0 0 0;
  overflow: hidden;
}

.face img {
  position: absolute;
  display: block;
  max-width: 100%;
  max-height: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  margin: auto;
}

footer {
  text-align: center;
  padding: 1em;
}

.talk {
  letter-spacing: 0.6em;
  opacity: 0.3;
}

.socialIcons {
  margin: 0.5em 0;
}

.socialIcons span:last-child {
  margin-right: 0;
}
.socialIcons span {
  padding: 0.2em;
  display: inline-block;
  background-color: white;
  opacity: 0.8;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out;
  border-radius: 4%;
  margin-right: 1em;
}

.socialIcons span:hover {
  cursor: pointer;
  opacity: 0.4;
}

.fb {
  border: 0.6em solid #3b5998;
}

.tw {
  border: 0.6em solid #1dcaff;
}

.yt {
  border: 0.6em solid #cd201f;
}

.gp {
  border: 0.6em solid #d34836;
}

/* Face carousel styling */


/**
 *
 * Plugin modifications
 *
 */
/* Slick */
.slick-dots li {
  bottom: 3em;
}

.slick-dots li button:before {
  color: #3b3a36;
  opacity: 1;
}

.slick-dots li.slick-active button:before {
  color: #e9ece5;
}

/* Sticky */
.is-sticky header,
.is-sticky .testo {
  background-color: white;
  z-index: 3;
}

.container .testo {
  -webkit-transition: all 0.5 ease-in-out;
          transition: all 0.5 ease-in-out;
}

.is-sticky .testo {
  width: 100% !important;
  right: 0;
  left: 0;
  padding: 1em 0;
  text-align: center;
  opacity: 1;
  box-shadow: 0 0.1em rgba(59, 58, 54, 0.08);
  color: rgba(59, 58, 54, 0.5);
}

/**
 *
 * Media queries
 *
 */
@media only screen and (min-width: 720px) {
 header .container {
    width: 94%;
    margin: 0 auto;
  }

  header .container,
  .slider .container {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
        -ms-flex-pack: justify;
            justify-content: space-between;
  }
  
  header .container,
  .slider .container,
  .wwd {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
        -ms-flex-direction: row;
            flex-direction: row;
  }

  .main-nav {
    margin: 0;
  }

  .logo,
  .description {
    margin: 0;
  }

  .wwd {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-flex-wrap: wrap;
        -ms-flex-wrap: wrap;
            flex-wrap: wrap;
  }

  .f1,
  .f2,
  .f3 {
    -webkit-box-flex: 1;
    -webkit-flex: 1 50%;
        -ms-flex: 1 50%;
            flex: 1 50%;
  }

  .feature {
    padding: 0 1em;
    text-align: center;
  }
}

@media only screen and (min-width: 1020px) {
  header .container,
  .container {
    width: 80%;
    max-width: 1020px;
    margin: 0 auto;
  }

  .text {
    text-align: left;
  }

  .wwd {
    -webkit-flex-wrap: nowrap;
        -ms-flex-wrap: nowrap;
            flex-wrap: nowrap;
  }
}

